# funny-video

./: .gitignore  CLAUDE.md  PROJECT_PLAN.md  ai_wall.html  funny_wall.html  index.html  pyproject.toml  run.py  run_ai.py  run_topic.py  schedule.yaml  wall.html
.claude/: scheduled_tasks.json
ai_archive/: 2026-06-27.html  2026-06-28.html  2026-06-29.html  2026-06-30.html  2026-07-01.html  2026-07-03.html  2026-07-04.html  2026-07-05.html  2026-07-06.html  2026-07-08.html  2026-07-12.html  2026-07-14.html  2026-07-16.html  2026-07-17.html  2026-07-18.html  2026-07-19.html  2026-07-20.html  2026-07-21.html  2026-07-22.html  2026-07-23.html  2026-07-24.html  counts.json  index.html
archive/: 2026-06-26.html  2026-06-27.html  2026-06-28.html  2026-06-29.html  2026-07-02.html  2026-07-05.html  counts.json  index.html
collectors/: .gitkeep  base.py  bilibili.py  bilibili_ai.py  douyin.py  wechat_video.py  xiaohongshu.py
funny_archive/: 1970-01-01.html  2020-01-01.html  2026-06-26.html  2026-06-28.html  2026-06-29.html  2026-06-30.html  2026-07-01.html  2026-07-02.html  2026-07-03.html  2026-07-04.html  2026-07-05.html  2026-07-07.html  2026-07-08.html  2026-07-11.html  2026-07-12.html  2026-07-14.html  2026-07-16.html  2026-07-17.html  2026-07-18.html  2026-07-19.html  2026-07-20.html  2026-07-21.html  2026-07-22.html  2026-07-23.html  2026-07-24.html  counts.json  index.html
pipeline/: dedup.py  tagging.py
publishers/: generate_wall.py
scripts/: scheduler.py
storage/: db.py  repository.py  schema.sql
tests/: test_claude_tool.py  test_collector_contracts.py  (+8 more)
(+11 files in other folders)
