[project]
name = "funny-video"
version = "0.1.0"
description = "搞笑视频聚合墙：B站/抖音/小红书采集 → 去重 → AI 打标签 → 视频墙"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "anthropic>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "slow: 需要真实 API 调用或 CDP 的集成测试，默认跳过",
]
addopts = ["-m", "not slow"]
